# neural2d

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  http-response-template.txt  inputData.txt  neural2d-core.cpp  neural2d-gui.py  neural2d.cpp  neural2d.h  parseTopologyConfig.cpp  qtui-neural-net2.ui  qtui.py  topology.txt  unitTest.cpp  user-manual.html  visualize.cpp  webserver.cpp  webserver.h
images/mnist/: makeTrainDataForNeural2d.py  topology-mnist.txt
includes/: messagequeue.h  webserver.h
src/: http-response-template.txt  imageReaderBMP.cpp  imageReaderDat.cpp  inputData.txt  messagequeue.cpp  neural2d-core.cpp  neural2d.cpp  neural2d.h  parseTopologyConfig.cpp  unitTest.cpp  utils.h  webserver.cpp
tests/: CMakeLists.txt  neural2d.cpp  unitTest.cpp
tests/data/: inputData-xor.txt  topology-xor.txt  topology.txt
tests/images/mnist/: topology-mnist.txt
